--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   <!-- Header -->
   <header>
     <div class="content">
-      <img src="profile.jpg" alt="Profile Photo">
+      <img src="https://github.com/reddyspoorthi99-tech/portfolio/blob/main/profile.jpg?raw=true" alt="Profile Photo">
       <h1>Spoorthi Reddy Marapelli</h1>
       <p>Aspiring Software Developer | Python | Flask | Django | Power BI</p>
       <p>
@@ -242,3 +242,4 @@
 
 </body>
 </html>
+
